  Bugfixes:
    - Fixed bug where labs cache didn't update when labs were built by space platforms or other mods.
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 09. 02. 2025
  Translation:
    - Russian translation updated by dodther.
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 09. 02. 2025
  Bugfixes:
    - Fixed setting min/max values not working
    - Fixed crash on load in latest experimental (2.0.34) due to signal item-subgroup changes.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 06. 01. 2025
  Features:
    - Added option to move techs to the back of the queue when they're switched away from, instead of moving them to second place.
  Translation:
    - Added AI-generated translations for Chinese, French, German, Japanese, Korean.
  Changes:
    - Increased default science-available threshold from 0.5 to 0.8, should reduce thrashing.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 14. 12. 2024
  Bugfixes:
    - Fix crash when labs become invalid. (Crash seems to happen in multiplayer with other mods; could not reproduce it but this probably fixes it.)
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 7. 12. 2024
  Optimizations:
    - Remove lag spikes by caching list of force's labs.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 7. 12. 2024
  Translation:
    - Added Russian translation by dodther.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 29. 11. 2024
  Bugfixes:
    - Fix another bug with typo in virtual signal name.